<resources>
    <string name="auth0_client_id">StqAJK8YE2CG6XIQl6iFj73Zpy6c9OX3</string>
    <string name="auth0_domain">d10275200.auth0.com</string>
    <string name="auth0_preferences">AUTH0_SHARED_PREFERENCES_KEY</string>


    <string name="app_name">Little_Apple</string>
    <string name="badminton_name1">小球</string>
    <string name="badminton_name2">挑球</string>
    <string name="badminton_name3">平球</string>
    <string name="badminton_name4">長球</string>
    <string name="badminton_name5">切球</string>
    <string name="badminton_name6">殺球</string>
    <string name="real_time">Real Time</string>
    <string name="number">總球數</string>
    <string name="date">日期</string>
    <string name="setting1">裝置連線</string>
    <string name="setting2">藍牙耳機連線</string>
    <string name="setting3">任務設定</string>
    <string name="setting4">基本資料</string>
    <string name="setting5">Train球拍</string>
    <string name="setting6">使用教學</string>
    <string name="name">姓名 :</string>
    <string name="height">身高 :</string>
    <string name="weight">體重 :</string>
    <string name="age">年齡 :</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!-- List Item -->
    <string name="TrainingData">Training</string>
    <string name="TestingData">Testing</string>


    <!-- Button -->
    <string name="Training_State">Finish\nSampling</string>
    <string name="Not_Training_State">Voiceprint\nSampling</string>
    <string name="Testing_State">Finish\nPlaying</string>
    <string name="Not_Testing_State">Play\nBadminton</string>
    <string name="View_Data">View\nStroke Data</string>

    <string name="PREFS_NAME">my_pref</string>
</resources>
