<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_alignParentBottom="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <Space
                android:layout_width="34dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:weightSum="1">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:background="@drawable/calendar"
                    android:id="@+id/DateButton" />
            </LinearLayout>

            <TextView
                android:text="Date_View_His"
                android:textSize="40dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/Date_View_His" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="149dp">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:hint="@string/badminton_name1"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:layout_width="126dp"
                    android:layout_height="71dp"
                    android:id="@+id/badminton_name1"
                    android:layout_row="0"
                    android:layout_column="0" />

                <TextView
                    android:hint="@string/badminton_name2"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:id="@+id/badminton_name2"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_width="126dp"
                    android:layout_height="71dp" />

                <TextView
                    android:hint="@string/badminton_name3"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:layout_height="71dp"
                    android:id="@+id/badminton_name3"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_width="126dp" />

                <TextView
                    android:hint="@string/badminton_name4"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:id="@+id/badminton_name4"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_width="126dp"
                    android:layout_height="71dp" />

                <TextView
                    android:hint="@string/badminton_name5"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:id="@+id/badminton_name5"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_width="126dp"
                    android:layout_height="71dp" />

                <TextView
                    android:hint="@string/badminton_name6"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:id="@+id/badminton_name6"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_width="126dp"
                    android:layout_height="71dp" />
            </GridLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text ="Game" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text = "Time"/>
            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text = "Type"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/history_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>