<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_weight="0.27">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="35dp"
            android:layout_height="match_parent"></LinearLayout>

        <Button
            android:layout_width="83dp"
            android:layout_height="79dp"
            android:id="@+id/button3"
            android:background="@drawable/user"/>

        <EditText
            android:layout_margin="@dimen/activity_vertical_margin"
            android:hint="Name"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:inputType="textPersonName"
            android:ems="30"
            android:textSize="25dp"
            android:id="@+id/editText" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="45dp"
            android:layout_height="match_parent"></LinearLayout>

        <Button
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:id="@+id/button2"
            android:background="@drawable/wifi"/>

        <TextView
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/setting1"
            android:textSize="23dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/textView2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="45dp"
            android:layout_height="match_parent"></LinearLayout>

        <Button
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:id="@+id/button6"
            android:background="@drawable/blueetoothlogo"/>

        <TextView
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/setting2"
            android:textSize="23dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/textView3" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="45dp"
            android:layout_height="match_parent"></LinearLayout>

        <Button
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:id="@+id/button7"
            android:background="@drawable/list"/>

        <TextView
            android:text="@string/setting3"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textSize="23dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/textView4"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="45dp"
            android:layout_height="match_parent"></LinearLayout>

        <Button
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:id="@+id/button8"
            android:background="@drawable/idcard"/>

        <TextView
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/setting4"
            android:textSize="23dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/textView5"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="45dp"
            android:layout_height="match_parent"></LinearLayout>

        <Button
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:id="@+id/button9"
            android:background="@drawable/badminton"/>

        <TextView
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/setting5"
            android:textSize="23dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/textView7"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="45dp"
            android:layout_height="match_parent"></LinearLayout>

        <Button

            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="47dp"
            android:layout_height="45dp"
            android:id="@+id/button11"
            android:background="@drawable/textdocument"/>

        <TextView
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/setting6"
            android:textSize="23dp"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/textView15"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>
