<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ivan.little_apple2.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="81dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:weightSum="1">

                <Button
                    android:layout_width="47dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:background="@drawable/linesmenu"/>

                ›<LinearLayout
                android:orientation="vertical"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"></LinearLayout>

                <Button
                    android:layout_width="37dp"
                    android:layout_height="35dp"
                    android:id="@+id/button4"
                    android:background="@drawable/leftarrow"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <TextView
                        android:text="@string/date"
                        android:textSize="35dp"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView14"
                        android:layout_weight="0.27" />
                </LinearLayout>

                <Button
                    android:layout_width="37dp"
                    android:layout_height="35dp"
                    android:id="@+id/button5"
                    android:background="@drawable/rightarrow"/>

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="270dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:layout_marginRight="219dp"
                android:layout_marginEnd="219dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="126dp"
                    android:layout_height="45dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="126dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/badminton_name1"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/textView6" />

                        <TextView
                            android:text="3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:textSize="25dp"
                            android:id="@+id/textview15"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="126dp"
                    android:layout_height="45dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="126dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/badminton_name2"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/badminton_name1" />

                        <TextView
                            android:text="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:textSize="25dp"
                            android:id="@+id/textView16"
                            android:layout_weight="1" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="126dp"
                    android:layout_height="45dp"
                    android:layout_weight="0.12">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="126dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/badminton_name3"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/textView8" />

                        <TextView
                            android:text="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:textSize="25dp"
                            android:id="@+id/textView17"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="126dp"
                    android:layout_height="45dp"
                    android:layout_weight="0.06">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="126dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/badminton_name4"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/textView9" />

                        <TextView
                            android:text="3"
                            android:layout_width="wrap_content"
                            android:textSize="25dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:id="@+id/textView18"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="126dp"
                    android:layout_height="45dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="126dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/badminton_name5"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/textView10" />

                        <TextView
                            android:text="10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:textSize="25dp"
                            android:id="@+id/textView19"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="126dp"
                    android:layout_height="45dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="126dp"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/badminton_name6"
                            android:textSize="25dp"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id="@+id/textView11" />

                        <TextView
                            android:text="20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:textSize="25dp"
                            android:id="@+id/textView20" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="152dp"
                android:layout_marginStart="152dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <Button
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="183dp"
                    android:id="@+id/button10"
                    android:background="@drawable/percent"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout">

                <TextView
                    android:text="@string/real_time"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView12" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:text="@string/number"
                    android:layout_gravity="center"
                    android:textSize="30dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
